--- a/Proyects/Proyects/Views/Shared/_Layout.cshtml
+++ b/Proyects/Proyects/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Eventos", "Index", "EventosAs")</li>
                     <li>@Html.ActionLink("Asignatura", "Index", "Asignaturas")</li>
+                    <li>@Html.ActionLink("Integrantes", "Miembros", "Home")</li>
                 </ul>
             </div>
         </div>
