--- a/Proyects/Proyects/Views/Home/About.cshtml
+++ b/Proyects/Proyects/Views/Home/About.cshtml
@@ -8,10 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-
-
-
+    <title>Excel</title>
 </head>
 
 <body>
