--- a/Proyects/Proyects/Views/Shared/_Layout.cshtml
+++ b/Proyects/Proyects/Views/Shared/_Layout.cshtml
@@ -23,8 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
                     <li>@Html.ActionLink("Eventos", "Index", "EventosAs")</li>
-                    <li>@Html.ActionLink("Asignatura", "Index", "Asignaturas")</li>
-                    <li>@Html.ActionLink("Integrantes", "Miembros", "Home")</li>
+                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
                 </ul>
             </div>
         </div>
