--- a/Proyects/Proyects/Views/Home/About.cshtml
+++ b/Proyects/Proyects/Views/Home/About.cshtml
@@ -8,7 +8,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Excel</title>
+    <title>Index</title>
+
+
+
 </head>
 
 <body>
