--- a/WebApplication3/WebApplication3/Views/Home/Index.cshtml
+++ b/WebApplication3/WebApplication3/Views/Home/Index.cshtml
@@ -1,34 +1,47 @@
-﻿@{
-    Layout = null;
+﻿@model IEnumerable<WebApplication3.Models.Estudiantes>
+
+@{
+    ViewBag.Title = "Index";
 }
 
 
 
+<h2>Consulta de asignaturas en curso</h2>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.Miembro)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Asignatura)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Cuatrimestre)
+        </th>
+        <th></th>
+    </tr>
 
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Miembro)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Asignatura)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cuatrimestre)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
+}
 
-
-</head>
-
-<body>
-    @using (Html.BeginForm("About", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
-    {
-
-        @Html.Raw(ViewBag.Error)
-        <span> Excel File </span><input type="file" name="excelfile" />
-        <br />
-        <input type="submit" value="About" />
-    }
-
-
-</body>
-
-
-
-
-</html>
+</table>
