--- a/WebApplication3/WebApplication3/Views/Product/Success.cshtml
+++ b/WebApplication3/WebApplication3/Views/Product/Success.cshtml
@@ -1,35 +1,34 @@
 ﻿
 @{
-    ViewBag.Title = "Success";
+    Layout = null;
 }
 
 <!DOCTYPE html>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Success</title>
 </head>
-
 <body>
-   
-    <h3>List Products</h3>
     <table cellpadding="2" cellspacing="2" border="1">
-        <tr>
 
+        <tr>
             <th>id</th>
             <th>evento</th>
             <th>fecha</th>
             <th>hora</th>
         </tr>
         @foreach (var p in ViewBag.ListProducts)
-        {
-        <tr>
-            <td>@p.id</td>
-            <td>@p.evento</td>
-            <td>@p.fecha</td>
-            <td>@p.hora</td>
 
-        </tr>
+        {
+            
+            <tr>
+                <td>@p.id</td>
+                <td>@p.evento</td>
+                <td>@p.fecha</td>
+                <td>@p.hora</td>
+            </tr>
         }
 
 
@@ -37,14 +36,6 @@
 
 
 
-
     </table>
-
-
 </body>
-
-
-
-
 </html>
-
