--- a/WebApplication3/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/WebApplication3/Views/Shared/_Layout.cshtml
@@ -18,13 +18,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Agenda1", "Index", "Agendact")</li>
+                    <li>@Html.ActionLink("Agenda2", "Index", "Agenda2")</li>
+                    <li>@Html.ActionLink("Acerda de..", "Acerca", "Home")</li>
+                    <li>@Html.ActionLink("Excel", "Index", "Product")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
